--- a/bell/bell.css
+++ b/bell/bell.css
@@ -14,6 +14,18 @@
   max-width: 1000px;
 }
 
+#bg-video {
+  height: 100%;
+  min-height: 800px;
+  margin-top: -20px;
+  position: relative;
+}
+
+#bg-video .video-js {
+  position: absolute;
+  top: 0;
+}
+
 .bg-gray {
   background-color: #f2f2f3;
 }
