--- a/bell/bell.css
+++ b/bell/bell.css
@@ -16,9 +16,11 @@
 
 #bg-video {
   height: 100%;
-  min-height: 800px;
+  width: 100%;
   margin-top: -20px;
-  position: relative;
+  min-height: 800px;
+  position: absolute;
+  opacity: .5;
 }
 
 #bg-video .video-js {
@@ -102,4 +104,41 @@ ul.navbar-right {
 
 footer {
   margin-top: 2em;
+}
+
+.lock-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  opacity: .7;
+}
+
+.lock-image {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.auth-form {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 290px;
+  background: #000;
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.username-overlay {
+  position: absolute;
+  color: #fff;
+  opacity: .5;
 }
