--- a/chivas/css/starter-template.css
+++ b/chivas/css/starter-template.css
@@ -2,6 +2,7 @@ body {
   line-height: 1.5;
   color: #555;
   font-family: 'Lato',sans-serif;
+  font-size: 15px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -57,10 +58,14 @@ a, a:hover {
 
 .bg-video video {
   position: relative;
+  width: 100%;
+  height: 100%
+  /*
   min-width: 100% !important;
   min-height: 100% !important;
   width: auto !important;
   height: auto !important;
+  */
 }
 
 .video-content-overlay {
@@ -77,11 +82,27 @@ a, a:hover {
   margin: auto;
   text-align: center;
   color: #eee;
-  margin-top: 10em;
+  margin-top: 25%;
   z-index: 10;
   margin-bottom: 10px;
   font-size: 24px;
   line-height: 1.5em;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.15);
+}
+
+.video-content-overlay .content img {
+  max-width: 583px;
+  width: 100%;
+}
+
+.video-content-overlay .content h2 {
+  margin-bottom: 10px;
+  font-size: 24px;
+}
+
+.video-content-overlay .content p {
+  margin-bottom: 10px;
+  font-size: 24px;
 }
 
 .video-overlay {
@@ -92,6 +113,10 @@ a, a:hover {
   left: 0;
   z-index: 5;
   background: rgba(0,0,0,0.55)  url(../img/grid.png) repeat;
+}
+
+.nopad {
+  padding: 0;
 }
 
 .col-centered{
@@ -142,6 +167,25 @@ a, a:hover {
 .portfolio-desc span {
   margin-top: 3px;
   color: #888;
+}
+
+.free {
+  color: #fff!important;
+}
+.label-success {
+  background-color: #5cb85c;
+}
+.label {
+  display: inline;
+  padding: .2em .6em .3em;
+  font-size: 45%;
+  font-weight: bold;
+  line-height: 1;
+  color: #ffffff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
 }
 
 .heading-block h3 {
